Fix lightbox UI alignment issues
DEV-525

--- a/src/components/lumavate-carousel/lumavate-carousel.scss
+++ b/src/components/lumavate-carousel/lumavate-carousel.scss
@@ -23,10 +23,8 @@
     z-index: 101;
     display: inline;
     color: white;
-    right: 16px;
-    padding: 10px;
     position: fixed;
-    top: 10px;
+    top: 12px;
     font-size: 35px;
     font-weight: bold;
   }
@@ -38,10 +36,11 @@
     justify-content: center;
     width: 100%;
     position: fixed;
-    top: 20px;
+    top: 19px;
     font-size: 18px;
     font-family: sans-serif;
     font-weight: bold;
+    left: 0px;
   }
 
   //slider
